--- a/css/common.css
+++ b/css/common.css
@@ -55,12 +55,9 @@ body {
 @media (max-width: 1199px){
     body {font-size: 15px;}
 }
-/* @media (max-width: 991px){
+@media (max-width: 575px){
     body {font-size: 14px;}
 }
-@media (max-width: 575px){
-    body {font-size: 13px;}
-} */
 
 
 a, a:hover, a:focus, a:active {
@@ -194,6 +191,9 @@ button:hover, button:focus, button:active {cursor: pointer;}
 @media (max-width: 1199px) {
     .btn-icon .count {line-height: 1.5em;}
 }
+@media (max-width: 575px) {
+    .btn_main {min-width: unset;}
+}
 
 /* TEXT STYLIZATION */
 h1, h2, h3, h4 {font-family: var(--font-2);}
@@ -220,6 +220,14 @@ h4 {
     font-size: 1.5em;
     font-weight: 500;
     margin-bottom: 1em;
+}
+@media (max-width: 767px) {
+    h1 {font-size: 2em;}
+    h2, h3 {font-size: 1.75em;}
+    h3 {text-align: center;}
+}
+@media (max-width: 575px) {
+    h1, h2, h3 {font-size: 1.5em;}
 }
 
 .font-1 {font-family: var(--font-1);}
@@ -260,8 +268,62 @@ h4 {
 .bb_1 {border-bottom: 1px solid;}
 
 .mb_4 {margin-bottom: 4em;}
+@media (max-width: 575px){
+    .mb_4 {margin-bottom: 3em;}
+}
 
 
 @media (min-width: 1660px) {
     .container {min-width: 1600px;}
+}
+
+
+/* SLIDERS */
+.swiper-1 {
+    overflow: hidden;
+    padding-bottom: 3em;
+}
+.swiper-2, .swiper-3, .swiper-4 {overflow: hidden;}
+
+.swiper-pagination {bottom: 0px !important;}
+.swiper-pagination-bullet {
+    width: .8em;
+    height: .8em;
+    border-radius: 50%;
+    background-color: var(--light-gray);
+    opacity: 1;
+    margin: 0 .4em !important;
+}
+.swiper-pagination-bullet-active {background-color: var(--accent);}
+
+.swiper-button-prev {left: -1em;}
+.swiper-button-next {right: -1em;}
+.swiper-2 .swiper-button-prev {left: 0em;}
+.swiper-2 .swiper-button-next {right: 0em;}
+.swiper-button-prev, .swiper-button-next {
+    width: 1.2em;
+    height: 3em;
+}
+.swiper-button-prev:after, .swiper-button-next:after {content: unset;}
+.swiper-button-prev svg, .swiper-button-next svg {
+    width: 1.2em;
+    height: 3em;
+    fill: none;
+}
+.swiper-button-prev svg path, .swiper-button-next svg path {
+    stroke: var(--dark-gray);
+    stroke-width: 4px;
+    stroke-linecap: square;
+    stroke-linejoin: round;
+}
+.swiper-2 .swiper-button-prev svg path, .swiper-2 .swiper-button-next svg path {
+    stroke: var(--accent);
+}
+
+@media (max-width: 767px) {
+    .swiper-1 {padding-bottom: 2.5em;}
+    .swiper-pagination-bullet {
+        width: .5em;
+        height: .5em;
+    }
 }
