--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,12 @@ header .logo {
     object-fit: contain;
     object-position: left center;
 }
-.burger svg {
-    width: 2em;
-    height: 2em;
-    fill: none;
+.burger i.fas {
+    font-size: 2em;
+    color: #fff;
 }
-.burger svg path {
-    stroke: #fff;
-    stroke-width: 3px;
-    stroke-linecap:square;
-    transition: .3s;
-}
-.burger:hover svg path, .burger:hover svg path {stroke: var(--accent);}
-.burger:active svg path {stroke: var(--accent-light);}
+.burger:hover i.fas, .burger:hover i.fas {color: var(--accent);}
+.burger:active i.fas {color: var(--accent-light);}
 .main-menu ul {
     list-style: none;
     display: flex;
@@ -52,6 +45,10 @@ header .logo {
         font-weight: 400;
     }
 }
+@media (max-width: 767px) {
+    header, header .row {height: 65px;}
+    header .logo {max-height: 65px;}
+}
 
 /* section 1 */
 #sec-1 {
@@ -73,7 +70,7 @@ header .logo {
     #sec-1 {
         height: 600px;
         padding-top: 1em;
-        background-position: left center;
+        /* background-position: left center; */
     }
 }
 @media (max-width: 767px) {
@@ -440,8 +437,6 @@ header .logo {
     height: 3em;
     display: flex;
 }
-.product-menu .swiper-slide:not(:last-child){margin-bottom: 2em;}
-
 .product-menu a, .product-menu button {
     color: #fff;
     font-family: var(--font-2);
@@ -499,9 +494,12 @@ header .logo {
     .product .btn_main span {font-size: .9em;}
 }
 @media (max-width: 767px) {
-    .product-menu .swiper-wrapper {
-        flex-direction: row;
-    }
+    .product-menu .swiper-wrapper {flex-direction: row;}
+    .product-menu a, .product-menu button {color: var(--light-gray);}
+    .product img {filter: grayscale(0);}
+}
+@media (max-width: 575px) {
+    .product img {height: 45vw;}
 }
 
 
@@ -611,6 +609,30 @@ footer {
     width: 2.5em;
     margin-left: .5em;
 }
+/* mobile */
+footer.mobile {
+    background-color: #F2F2F2;
+    height: 50px;
+    position: sticky;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 100;
+    box-shadow: 0px 0px 10px rgba(130, 130, 130, 0.29);
+}
+footer.mobile a {
+    text-align: center;
+    font-size: 10px;
+    color: var(--light-gray);
+}
+footer.mobile a svg {
+    width: 24px;
+    height: 24px;
+    fill: none;
+}
+footer.mobile a svg path {fill: var(--light-gray);}
+footer.mobile a.active {color:var(--accent);}
+footer.mobile a.active svg path {fill: var(--accent);}
 
 
 /* modal */
